--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
@@ -66,9 +66,9 @@
                          data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
                             <a class="nav-link" href="employeeAdd.html">Dodaj</a>
-                            <a class="nav-link" href="employeeDelete.html">Usuń</a>
-                            <a class="nav-link" href="employeeModify.html">Modyfikuj</a>
-                            <a class="nav-link" href="employeeList.html">Pełna Lista</a>
+                            <a class="nav-link" href="layout-sidenav-light.html">Usuń</a>
+                            <a class="nav-link" href="layout-sidenav-light.html">Modyfikuj</a>
+                            <a class="nav-link" href="layout-sidenav-light.html">Pełna Lista</a>
                         </nav>
                     </div>
 
