--- a/VacationPlaner-WebApp/src/main/resources/templates/index.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/index.html
@@ -81,10 +81,10 @@
                     <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne"
                          data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="layout-static.html">Dodaj</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Usuń</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Modyfikuj</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Pełna Lista</a>
+                            <a class="nav-link" href="teamAdd.html">Dodaj</a>
+                            <a class="nav-link" href="teamDelete.html">Usuń</a>
+                            <a class="nav-link" href="teamModify.html">Modyfikuj</a>
+                            <a class="nav-link" href="teamList.html">Pełna Lista</a>
                         </nav>
                     </div>
 
