--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Dashboard - SB Admin</title>
+    <title>Add Employee</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet"/>
@@ -66,9 +66,9 @@
                          data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
                             <a class="nav-link" href="employeeAdd.html">Dodaj</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Usuń</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Modyfikuj</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Pełna Lista</a>
+                            <a class="nav-link" href="employeeDelete.html">Usuń</a>
+                            <a class="nav-link" href="employeeModify.html">Modyfikuj</a>
+                            <a class="nav-link" href="employeeList.html">Pełna Lista</a>
                         </nav>
                     </div>
 
@@ -81,10 +81,10 @@
                     <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne"
                          data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="layout-static.html">Dodaj</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Usuń</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Modyfikuj</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Pełna Lista</a>
+                            <a class="nav-link" href="teamAdd.html">Dodaj</a>
+                            <a class="nav-link" href="teamDelete.html">Usuń</a>
+                            <a class="nav-link" href="teamModify.html">Modyfikuj</a>
+                            <a class="nav-link" href="teamList.html">Pełna Lista</a>
                         </nav>
                     </div>
 
@@ -97,10 +97,10 @@
                     <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
                          data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="layout-static.html">Dodaj</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Usuń</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Modyfikuj</a>
-                            <a class="nav-link" href="layout-sidenav-light.html">Pełna Lista</a>
+                            <a class="nav-link" href="vacationAdd.html">Dodaj</a>
+                            <a class="nav-link" href="vacationDelete.html">Usuń</a>
+                            <a class="nav-link" href="vacationModify.html">Modyfikuj</a>
+                            <a class="nav-link" href="vacationList.html">Pełna Lista</a>
                         </nav>
                     </div>
                     <div class="sb-sidenav-menu-heading">Dodatkowo</div>
@@ -123,7 +123,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Vacation Planner</h1>
+                <h1 class="mt-4">Vacation Planner - Dodawanie Pracowników</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
