--- a/VacationPlaner-WebApp/src/main/resources/templates/teamAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamAdd.html
@@ -7,7 +7,8 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Dodawanie Drużyny</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet"/>
     <link href="css/styles.css" rel="stylesheet"/>
@@ -128,9 +129,26 @@
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
+            <div class="container-fluid px-4">
+                <div class="row">
+                <div class="col-3">
+                    <label for="formGroupExampleInput" class="form-label">Podaj nazwę drużyny:</label>
+                    <input type="text"  class="form-control" id="formGroupExampleInput">
+                    <div class="mb-3"></div>
+                </div></div>
+
+            </div>
+            <div class="mb-3">
+                <div class="col-sm-4">
+                </div>
+                <div class="mb-3"></div>
+                <div class="container-fluid px-4">
+                <button styele type="button"  class="btn btn-success">Dodaj drużynę</button>
+                </div>
+            </div>
+
+
         </main>
-
-
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
