--- a/VacationPlaner-WebApp/src/main/resources/templates/index.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/index.html
@@ -132,7 +132,7 @@
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-table me-1"></i>
-                    Lista Pracownikóœ
+                    Lista Pracowników
                 </div>
                 <div class="card-body">
                     <table id="datatablesSimple">
