--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
@@ -147,58 +147,50 @@
         </div>
         <div class="col-md-4">
             <label for="validationCustomUsername" class="form-label">Email</label>
-            <div class="input-group has-validation">
-                <span class="input-group-text" id="inputGroupPrepend">@</span>
                 <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
                 <div class="invalid-feedback">
                     Please choose a username.
                 </div>
-            </div>
         </div>
         <div class="col-md-4">
-            <label for="validationCustom03" class="form-label">Miasto</label>
+            <label for="validationCustom03" class="form-label">Ulica</label>
             <input type="text" class="form-control" id="validationCustom03" required>
             <div class="invalid-feedback">
                 Please provide a valid city.
             </div>
         </div>
         <div class="col-md-4">
-            <label for="validationCustom03" class="form-label">Ulica</label>
+            <label for="validationCustom03" class="form-label">Numer domu / mieszkania</label>
             <input type="text" class="form-control" id="validationCustom06" required>
             <div class="invalid-feedback">
                 Please provide a valid city.
             </div>
         </div>
-        <div class="col-md-3">
-            <label for="validationCustom04" class="form-label">Kod Pocztowy</label>
-            <select class="form-select" id="validationCustom04" required>
-                <option selected disabled value="">Choose...</option>
-                <option>...</option>
-            </select>
+        <div class="col-md-4">
+            <label for="validationCustom03" class="form-label">Miasto</label>
+            <input type="text" class="form-control" id="validationCustom07" required>
+            <div class="invalid-feedback">
+                Please provide a valid city.
+            </div>
+        </div>
+        <div class="col-4">
+            <label for="validationCustom08" class="form-label">Kod Pocztowy</label>
+            <input type="text" class="form-control" id="validationCustom08" required>
+
             <div class="invalid-feedback">
                 Please select a valid state.
             </div>
         </div>
-        <div class="col-md-3">
-            <label for="validationCustom05" class="form-label">Zip</label>
+        <div class="col-sm-4">
+            <label for="validationCustom05" class="form-label">Numer Telefonu</label>
             <input type="text" class="form-control" id="validationCustom05" required>
             <div class="invalid-feedback">
                 Please provide a valid zip.
             </div>
         </div>
+
         <div class="col-12">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                <label class="form-check-label" for="invalidCheck">
-                    Agree to terms and conditions
-                </label>
-                <div class="invalid-feedback">
-                    You must agree before submitting.
-                </div>
-            </div>
-        </div>
-        <div class="col-12">
-            <button class="btn btn-success" type="submit">Submit form</button>
+            <button class="btn btn-success" type="submit">Zapisz Pracownika</button>
         </div>
     </form>
 </div>
