--- a/VacationPlaner-WebApp/src/main/resources/templates/teamAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamAdd.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Dodawanie Drużyny</title>
+    <title>Dodawanie Zespołu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -124,20 +124,19 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Vacation Planner - Dodawanie Drużyny</h1>
+                <h1 class="mt-4">Vacation Planner - Dodawanie Zespołu</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
 
-            <div class="container-fluid px-4">
+            <div class="container-fluid">
                 <div class="row">
                 <div class="col-3">
                     <label for="formGroupExampleInput" class="form-label">Podaj nazwę drużyny:</label>
                     <input type="text"  class="form-control" id="formGroupExampleInput">
                     <div class="mb-3"></div>
                 </div></div>
-
             </div>
             <div class="mb-3">
                 <div class="col-sm-4">
