--- a/VacationPlaner-WebApp/src/main/resources/templates/teamDelete.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamDelete.html
@@ -123,14 +123,26 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Vacation Planner - Usuwanie Drużyny</h1>
+                <h1 class="mt-4">Vacation Planner - Usuwanie Zespołu</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
         </main>
+        <div class="container-fluid px-4">
+            <div class="row">
+                <div class="col-3">
+                    <label for="formGroupExampleInput" class="form-label">Usuń Zespół:</label>
+                    <input type="text"  class="form-control" id="formGroupExampleInput">
+                    <div class="mb-3"></div>
+                </div></div>
 
-
+        </div>
+        <div class="mb-3">
+            <div class="container-fluid px-4">
+                <button style="display: inline-block;" type="button" class="btn btn-success">Usuń zespół</button>
+            </div>
+        </div>
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
