--- a/VacationPlaner-WebApp/src/main/resources/templates/teamAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamAdd.html
@@ -124,7 +124,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Vacation Planner - Dodawanie Drużyny</h1>
+                <h1 class="mt-4">Vacation Planner - Dodawanie Zespołu</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
@@ -133,7 +133,7 @@
             <div class="container-fluid px-4">
                 <div class="row">
                 <div class="col-3">
-                    <label for="formGroupExampleInput" class="form-label">Podaj nazwę drużyny:</label>
+                    <label for="formGroupExampleInput" class="form-label">Podaj nazwę Zespołu:</label>
                     <input type="text"  class="form-control" id="formGroupExampleInput">
                     <div class="mb-3"></div>
                 </div></div>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="mb-3"></div>
                 <div class="container-fluid px-4">
-                <button styele type="button"  class="btn btn-success">Dodaj drużynę</button>
+                <button styele type="button"  class="btn btn-success">Dodaj zespół</button>
                 </div>
             </div>
         </main>
