--- a/VacationPlaner-WebApp/src/main/resources/templates/teamModify.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamModify.html
@@ -123,13 +123,35 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">Vacation Planner - Modyfikacja Drużyn</h1>
+                <h1 class="mt-4">Vacation Planner - Modyfikacja Zespołu</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
         </main>
+        <div class="container-fluid px-4">
+            <div class="row">
+                <div class="col-3">
+                    <label for="formGroupExampleInput" class="form-label">Edytuj nazwę Zespołu:</label>
+                    <input type="text"  class="form-control" id="formGroupExampleInput">
+                    <div class="mb-3"></div>
+                </div></div>
 
+        </div>
+        <div class="mb-3">
+            <div class="container-fluid px-4">
+                <button style="display: inline-block; margin-left: 10px;" type="button" class="btn btn-success">Zapisz zmiany</button>
+            </div>
+        </div>
+        </main>
+        <footer class="py-4 bg-light mt-auto">
+            <div class="container-fluid px-4">
+                <div class="d-flex align-items-center justify-content-between small">
+                    <div class="text-muted">Copyright &copy; By Luz_Blue Team</div>
+                </div>
+            </div>
+        </footer>
+    </div>
 
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
