--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeList.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeList.html
@@ -17,11 +17,11 @@
 </head>
 <body class="sb-nav-fixed">
 
-<div th:insert="~{commonCode/commonFile :: body}"></div>
+<div th:insert="~{commonCode/TopNavBarTemplate :: body}"></div>
 
 <div id="layoutSidenav">
 
-    <div th:insert="~{commonCode/commonFile2 :: body}"></div>
+    <div th:insert="~{commonCode/LeftNavBarTemplate :: body}"></div>
 
     <div id="layoutSidenav_content">
         <main>
