--- a/VacationPlaner-WebApp/src/main/resources/templates/tables.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/tables.html
@@ -12,11 +12,11 @@
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed">
-    <div th:insert="~{commonCode/commonFile :: body}"></div>
+    <div th:insert="~{commonCode/TopNavBarTemplate :: body}"></div>
 
     <div id="layoutSidenav">
 
-        <div th:insert="~{commonCode/commonFile2 :: body}"></div>
+        <div th:insert="~{commonCode/LeftNavBarTemplate :: body}"></div>
 
         <div id="layoutSidenav_content">
                 <main>
