adress added, add employee partialy working

--- a/VacationPlaner-WebApp/src/main/resources/templates/commonCode/LeftNavBarTemplate.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/commonCode/LeftNavBarTemplate.html
@@ -35,10 +35,10 @@
                 <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
                      data-bs-parent="#sidenavAccordion">
                     <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" href="../employeeAdd.html">Dodaj</a>
-                        <a class="nav-link" href="../employeeDelete.html">Usuń</a>
-                        <a class="nav-link" href="../employeeModify.html">Modyfikuj</a>
-                        <a class="nav-link" href="../employeeList.html">Pełna Lista</a>
+                        <a class="nav-link" href="../employeeAdd">Dodaj</a>
+                        <a class="nav-link" href="../employeeDelete">Usuń</a>
+                        <a class="nav-link" href="../employeeModify">Modyfikuj</a>
+                        <a class="nav-link" href="../employeeList">Pełna Lista</a>
                     </nav>
                 </div>
 
@@ -51,10 +51,10 @@
                 <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne"
                      data-bs-parent="#sidenavAccordion">
                     <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" href="../teamAdd.html">Dodaj</a>
-                        <a class="nav-link" href="../teamDelete.html">Usuń</a>
-                        <a class="nav-link" href="../teamModify.html">Modyfikuj</a>
-                        <a class="nav-link" href="../teamList.html">Pełna Lista</a>
+                        <a class="nav-link" href="../teamAdd">Dodaj</a>
+                        <a class="nav-link" href="../teamDelete">Usuń</a>
+                        <a class="nav-link" href="../teamModify">Modyfikuj</a>
+                        <a class="nav-link" href="../teamList">Pełna Lista</a>
                     </nav>
                 </div>
 
@@ -67,10 +67,10 @@
                 <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
                      data-bs-parent="#sidenavAccordion">
                     <nav class="sb-sidenav-menu-nested nav">
-                        <a class="nav-link" href="../vacationAdd.html">Dodaj</a>
-                        <a class="nav-link" href="../vacationDelete.html">Usuń</a>
-                        <a class="nav-link" href="../vacationModify.html">Modyfikuj</a>
-                        <a class="nav-link" href="../vacationList.html">Pełna Lista</a>
+                        <a class="nav-link" href="../vacationAdd">Dodaj</a>
+                        <a class="nav-link" href="../vacationDelete">Usuń</a>
+                        <a class="nav-link" href="../vacationModify">Modyfikuj</a>
+                        <a class="nav-link" href="../vacationList">Pełna Lista</a>
                     </nav>
                 </div>
                 <div class="sb-sidenav-menu-heading">Dodatkowo</div>
