--- a/VacationPlaner-WebApp/src/main/resources/templates/teamAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamAdd.html
@@ -31,23 +31,21 @@
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
+            <div class="container">
+            <form action="#" th:action="@{/employeeAdd.html}" th:object="${employee}" method="post"
+                  class="row g-3 needs-validation" novalidate>
+                <div class="col-md-4">
+                    <label for="validationCustom01" class="form-label">Nazwa zespołu</label>
+                    <input type="text" class="form-control" id="validationCustom01">
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <div class="col-12">
+                    <button class="btn btn-success" type="submit">Zapisz</button>
+                </div>
+            </form>
 
-            <div class="container-fluid">
-                <div class="row">
-                <div class="col-3">
-                    <label for="formGroupExampleInput" class="form-label">Podaj nazwę Zespołu:</label>
-                    <input type="text"  class="form-control" id="formGroupExampleInput">
-                    <div class="mb-3"></div>
-                </div></div>
-            </div>
-            <div class="mb-3">
-                <div class="col-sm-4">
-                </div>
-                <div class="mb-3"></div>
-                <div class="container-fluid px-4">
-                <button styele type="button"  class="btn btn-success">Dodaj zespół</button>
-                </div>
-            </div>
         </main>
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
