--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeDelete.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeDelete.html
@@ -32,6 +32,59 @@
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
+
+            <div class="card mb-4">
+                <div class="card-header">
+                    <i class="fas fa-table me-1"></i>
+                    Lista Pracowników
+                </div>
+                <div class="card-body">
+                    <table id="datatablesSimple">
+                        <thead>
+                        <tr>
+                            <th>Lp</th>
+                            <th>Imie</th>
+                            <th>Nazwisko</th>
+                            <th>PESEL</th>
+                            <th>Email</th>
+                            <th>Adres</th>
+                            <th>Numer Telefonu</th>
+                            <th>Opcje</th>
+
+                        </tr>
+                        </thead>
+                        <tfoot>
+                        <tr>
+                            <th>Lp</th>
+                            <th>Imie</th>
+                            <th>Nazwisko</th>
+                            <th>PESEL</th>
+                            <th>Email</th>
+                            <th>Adres</th>
+                            <th>Numer Telefonu</th>
+                            <th>Opcje</th>
+                        </tr>
+                        </tfoot>
+                        <tbody>
+                        <tr th:each="Employee,iter: ${AllEmployees}">
+                            <th th:text="${iter.count}"></th>
+                            <th th:text="${Employee.getName()}"></th>
+                            <td th:text="${Employee.getSurname()}"></td>
+                            <td th:text="${Employee.getPesel()}"></td>
+                            <td th:text="${Employee.getEmail()}"></td>
+                            <td th:text="${Employee.getAddress()}"></td>
+                            <td th:text="${Employee.getPhoneNumber()}"></td>
+                            <td>
+                                <a th:href="@{/employeeDelete/{id}(id=${Employee.employeeIdAsString})}"  class="btn btn-danger">
+                                    DELETE
+                                </a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
         </main>
 
 
