Adding employee to modify working, updat biznes logic + controller left

--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeDelete.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeDelete.html
@@ -76,7 +76,7 @@
                             <td th:text="${Employee.getPhoneNumber()}"></td>
                             <td>
                                 <a th:href="@{/employeeDelete/{id}(id=${Employee.employeeId})}"  class="btn btn-danger">
-                                    DELETE
+                                    USUŃ
                                 </a>
                             </td>
                         </tr>
