--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeAdd.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="container">
-                <form action="#" th:action="@{/employeeAdd}" th:object="${employee}" method="post"
+                <form action="#" th:action="@{/employeeAdd}" th:object="${employeeKeyAdd}" method="post"
                       class="row g-3 needs-validation" novalidate>
                     <div class="col-md-4">
                         <label for="validationCustom01" class="form-label">Imię</label>
