--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeModify.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeModify.html
@@ -31,77 +31,133 @@
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
+
             <div class="container">
-                <form class="row g-3 needs-validation" novalidate>
+                <form action="#" th:action="@{/employeeModify}" th:object="${employeeKeyModify}" method="post"
+                      class="row g-3 needs-validation" novalidate>
                     <div class="col-md-4">
                         <label for="validationCustom01" class="form-label">Imię</label>
-                        <input type="text" class="form-control" id="validationCustom01" required>
+                        <input type="text" th:field="*{name}" class="form-control" id="validationCustom01">
+                        <div> </div>
                         <div class="valid-feedback">
                             Looks good!
                         </div>
                     </div>
                     <div class="col-md-4">
                         <label for="validationCustom02" class="form-label">Nazwisko</label>
-                        <input type="text" class="form-control" id="validationCustom02" required>
+                        <input type="text" th:field="*{surname}" class="form-control" id="validationCustom02">
                         <div class="valid-feedback">
                             Looks good!
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <label for="validationCustomUsername" class="form-label">Email</label>
-                        <div class="input-group has-validation">
-                            <span class="input-group-text" id="inputGroupPrepend">@</span>
-                            <input type="text" class="form-control" id="validationCustomUsername"
-                                   aria-describedby="inputGroupPrepend" required>
-                            <div class="invalid-feedback">
-                                Please choose a username.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustom03" class="form-label">Miasto</label>
-                        <input type="text" class="form-control" id="validationCustom03" required>
-                        <div class="invalid-feedback">
-                            Please provide a valid city.
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustom03" class="form-label">Ulica</label>
-                        <input type="text" class="form-control" id="validationCustom06" required>
-                        <div class="invalid-feedback">
-                            Please provide a valid city.
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <label for="validationCustom04" class="form-label">Kod Pocztowy</label>
-                        <input type="text" class="form-control" id="validationCustom04" required>
+                    <div class="col-4">
+                        <label for="validationCustom09" class="form-label">PESEL</label>
+                        <input type="text" th:field="*{pesel}" class="form-control" id="validationCustom09">
                         <div class="invalid-feedback">
                             Please select a valid state.
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <label for="validationCustom05" class="form-label">Pesel</label>
-                        <input type="text" class="form-control" id="validationCustom05" required>
+                    <div class="col-md-4">
+                        <label for="validationCustomUsername" class="form-label">Email</label>
+                        <input type="text" th:field="*{email}"  class="form-control" id="validationCustomUsername"
+                               aria-describedby="inputGroupPrepend">
                         <div class="invalid-feedback">
-                            Please select a valid Pesel.
+                            Please choose a username.
                         </div>
                     </div>
-                    <div class="col-12">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                            <label class="form-check-label" for="invalidCheck">
-                                Potwierdzasz zmiany
-                            </label>
-                            <div class="invalid-feedback">
-                                You must agree before submitting.
-                            </div>
+                    <div class="col-md-4">
+                        <label for="validationCustom03" class="form-label">Ulica</label>
+                        <input type="text" th:field="*{address.street}" class="form-control" id="validationCustom03">
+                        <div class="invalid-feedback">
+                            Please provide a valid city.
                         </div>
                     </div>
+                    <div class="col-md-4">
+                        <label for="validationCustom03" class="form-label">Numer domu / mieszkania</label>
+                        <input type="text"  th:field="*{address.houseNumber}" class="form-control" id="validationCustom06">
+                        <div class="invalid-feedback">
+                            Please provide a valid city.
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="validationCustom03" class="form-label">Miasto</label>
+                        <input type="text" th:field="*{address.city}" class="form-control" id="validationCustom07">
+                        <div class="invalid-feedback">
+                            Please provide a valid city.
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <label for="validationCustom08" class="form-label">Kod Pocztowy</label>
+                        <input type="text" th:field="*{address.zipCode}" class="form-control" id="validationCustom08">
+                        <div class="invalid-feedback">
+                            Please select a valid state.
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <label for="validationCustom05" class="form-label">Numer Telefonu</label>
+                        <input type="text" th:field="*{phoneNumber}" class="form-control" id="validationCustom05">
+                        <div class="invalid-feedback">
+                            Podaj numer telefonu
+                        </div>
+                    </div>
+
                     <div class="col-12">
                         <button class="btn btn-success" type="submit">Zapisz zmiany</button>
                     </div>
                 </form>
             </div>
+            <h3> </h3>
+            <div class="card mb-4">
+                <div class="card-header">
+                    <i class="fas fa-table me-1"></i>
+                    Lista Pracowników
+                </div>
+                <div class="card-body">
+                    <table id="datatablesSimple">
+                        <thead>
+                        <tr>
+                            <th>Lp</th>
+                            <th>Imie</th>
+                            <th>Nazwisko</th>
+                            <th>PESEL</th>
+                            <th>Email</th>
+                            <th>Adres</th>
+                            <th>Numer Telefonu</th>
+                            <th>Opcje</th>
+                        </tr>
+                        </thead>
+                        <tfoot>
+                        <tr>
+                            <th>Lp</th>
+                            <th>Imie</th>
+                            <th>Nazwisko</th>
+                            <th>PESEL</th>
+                            <th>Email</th>
+                            <th>Adres</th>
+                            <th>Numer Telefonu</th>
+                            <th>Opcje</th>
+                        </tr>
+                        </tfoot>
+                        <tbody>
+                        <tr th:each="Employee,iter: ${AllEmployees}">
+                            <th th:text="${iter.count}"></th>
+                            <th th:text="${Employee.getName()}"></th>
+                            <td th:text="${Employee.getSurname()}"></td>
+                            <td th:text="${Employee.getPesel()}"></td>
+                            <td th:text="${Employee.employeeId}"></td>
+                            <td th:text="${Employee.getAddress()}"></td>
+                            <td th:text="${Employee.getPhoneNumber()}"></td>
+                            <td>
+                                <a th:href="@{/employeeModify/{id}(id=${Employee.employeeId})}"  class="btn btn-success">
+                                    Modyfikuj
+                                </a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
         </main>
 
         <footer class="py-4 bg-light mt-auto">
