Employe Modyfie working-fix1

--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeDelete.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeDelete.html
@@ -71,7 +71,7 @@
                             <th th:text="${Employee.getName()}"></th>
                             <td th:text="${Employee.getSurname()}"></td>
                             <td th:text="${Employee.getPesel()}"></td>
-                            <td th:text="${Employee.employeeId}"></td>
+                            <td th:text="${Employee.email}"></td>
                             <td th:text="${Employee.getAddress()}"></td>
                             <td th:text="${Employee.getPhoneNumber()}"></td>
                             <td>
