--- a/VacationPlaner-WebApp/src/main/resources/templates/employeeModify.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/employeeModify.html
@@ -55,7 +55,7 @@
                         <label for="validationCustom09" class="form-label">PESEL</label>
                         <input type="text" th:field="*{pesel}" class="form-control" id="validationCustom09">
                         <div class="invalid-feedback">
-                            Please select a valid state.
+                            Please select a valid pesel.
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -63,21 +63,21 @@
                         <input type="text" th:field="*{email}"  class="form-control" id="validationCustomUsername"
                                aria-describedby="inputGroupPrepend">
                         <div class="invalid-feedback">
-                            Please choose a username.
+                            Please provide a valid e-mail.
                         </div>
                     </div>
                     <div class="col-md-4">
                         <label for="validationCustom03" class="form-label">Ulica</label>
                         <input type="text" th:field="*{address.street}" class="form-control" id="validationCustom03">
                         <div class="invalid-feedback">
-                            Please provide a valid city.
+                            Please provide a valid street.
                         </div>
                     </div>
                     <div class="col-md-4">
                         <label for="validationCustom03" class="form-label">Numer domu / mieszkania</label>
                         <input type="text"  th:field="*{address.houseNumber}" class="form-control" id="validationCustom06">
                         <div class="invalid-feedback">
-                            Please provide a valid city.
+                            Please provide a valid number.
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -91,7 +91,7 @@
                         <label for="validationCustom08" class="form-label">Kod Pocztowy</label>
                         <input type="text" th:field="*{address.zipCode}" class="form-control" id="validationCustom08">
                         <div class="invalid-feedback">
-                            Please select a valid state.
+                            Please select a valid zip code.
                         </div>
                     </div>
                     <div class="col-sm-4">
@@ -108,10 +108,6 @@
                     </div>
                 </form>
             </div>
-
-
-            <h3> </h3>
-
 
             <div class="card mb-4">
                 <div class="card-header">
@@ -163,9 +159,7 @@
                     </table>
                 </div>
             </div>
-
         </main>
-
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
