--- a/VacationPlaner-WebApp/src/main/resources/templates/teamDelete.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamDelete.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns="http://www.w3.org/1999/html">
+<html lang="pl" xmlns="http://www.w3.org/1999/html" >
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Usuwanie Drużyny</title>
+    <title>Usuwanie Zespołu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet"/>
@@ -30,21 +30,43 @@
                     <li class="breadcrumb-item active">by Luz_Blue</li>
                 </ol>
             </div>
-        </main>
-        <div class="container-fluid px-4">
-            <div class="row">
-                <div class="col-3">
-                    <label for="formGroupExampleInput" class="form-label">Usuń Zespół:</label>
-                    <input type="text"  class="form-control" id="formGroupExampleInput">
-                    <div class="mb-3"></div>
-                </div></div>
 
-        </div>
-        <div class="mb-3">
-            <div class="container-fluid px-4">
-                <button style="display: inline-block;" type="button" class="btn btn-success">Usuń zespół</button>
+        <div class="card mb-4">
+            <div class="card-header">
+                <i class="fas fa-table me-1"></i>
+                Lista Zespołów
+            </div>
+            <div class="card-body">
+                <table id="datatablesSimple">
+                    <thead>
+                    <tr>
+                        <th>L.p.</th>
+                        <th>Nazwy zespołów</th>
+                        <th>Opcje</th>
+                    </tr>
+                    </thead>
+                    <tfoot>
+                    <tr>
+                        <th>L.p.</th>
+                        <th>Nazwy zespołów</th>
+                        <th>Opcje</th>
+                    </tr>
+                    </tfoot>
+                    <tbody>
+                    <tr th:each="Team,iter: ${AllTeams}">
+                        <th th:text="${iter.count}"></th>
+                        <td th:text="${Team.getTeamName()}"></td>
+                    <td>
+                            <a th:href="@{/teamDelete/{teamName}(teamName=${Team.getTeamName()})}" class="btn btn-danger">
+                                USUŃ
+                            </a>
+                    </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
+        </main>
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
