--- a/VacationPlaner-WebApp/src/main/resources/templates/teamList.html
+++ b/VacationPlaner-WebApp/src/main/resources/templates/teamList.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Lista Drużyn</title>
+    <title>Lista Zespołów</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet"/>
@@ -36,29 +36,31 @@
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-table me-1"></i>
-                    Lista Pracowników
+                    Lista Zespołów
                 </div>
                 <div class="card-body">
                     <table id="datatablesSimple">
                         <thead>
                         <tr>
-                            <th>Team</th>
+                            <th>L.p.</th>
+                            <th>Nazwy zespołów</th>
                         </tr>
                         </thead>
                         <tfoot>
                         <tr>
-                            <th>Imie</th>
+                            <th>L.p.</th>
+                            <th>Nazwy zespołów</th>
                         </tr>
                         </tfoot>
                         <tbody>
-                        <tr th:each="team: ${AllTeam}">
-                            <th th:text="${team.getTeam}"></th>
+                        <tr th:each="Team,iter: ${AllTeams}">
+                            <th th:text="${iter.count}"></th>
+                            <td th:text="${Team.getTeamName()}"></td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
-
         </main>
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
